<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3">

        <TextView
            android:id="@+id/textView"
            android:gravity="left|center"
            android:paddingLeft="20px"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textColorHint="@color/purple_200"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3">

        <TextView
            android:id="@+id/textView1"
            android:gravity="left|center"
            android:paddingLeft="20px"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textColorHint="@color/purple_200"
            android:inputType="number"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/textView2"
                android:gravity="left|center"
                android:paddingLeft="20px"
                android:paddingBottom="20px"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5000"
                android:min="0"
                android:layout_weight="5"
                android:padding = "0dp"
                android:layout_margin="0dp"/>
            <TextView
                android:id="@+id/salaryBarInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding = "0dp"
                android:layout_margin="0dp"
                android:text="- -"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/radioGroup1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding = "10dp"
            android:layout_margin="0dp"
            android:layout_weight="0.3"
            android:text = "@string/radioButtonGroup1"
            android:textSize="8pt"/>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#024CAF50"
            android:orientation="horizontal"
            android:layout_weight="0.7"
            >

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton11"
                android:textSize="6pt"
                android:layout_weight="0.25"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton12"
                android:textSize="6pt"
                android:layout_weight="0.25" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton13"
                android:textSize="6pt"
                android:layout_weight="0.25"/>

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton14"
                android:textSize="6pt"
                android:layout_weight="0.25"/>
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/radioGroup2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding = "10dp"
            android:layout_margin="0dp"
            android:layout_weight="0.3"
            android:text = "@string/radioButtonGroup2"
            android:textSize="8pt"/>


        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#024CAF50"
            android:orientation="horizontal"
            android:layout_weight="0.7"
            >

            <RadioButton
                android:id="@+id/radioButton21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton21"
                android:textSize="6pt"
                android:layout_weight="0.25"/>

            <RadioButton
                android:id="@+id/radioButton22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton22"
                android:textSize="6pt"
                android:layout_weight="0.25" />

            <RadioButton
                android:id="@+id/radioButton23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton23"
                android:textSize="6pt"
                android:layout_weight="0.25"/>

            <RadioButton
                android:id="@+id/radioButton24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton24"
                android:textSize="6pt"
                android:layout_weight="0.25"/>
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/radioGroup3Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding = "10dp"
            android:layout_margin="0dp"
            android:layout_weight="0.3"
            android:text = "@string/radioButtonGroup3"
            android:textSize="8pt"/>


        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#024CAF50"
            android:orientation="horizontal"
            android:layout_weight="0.7"
            >

            <RadioButton
                android:id="@+id/radioButton31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton31"
                android:textSize="6pt"
                android:layout_weight="0.25"/>

            <RadioButton
                android:id="@+id/radioButton32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/radioButton32"
                android:textSize="6pt" />

            <RadioButton
                android:id="@+id/radioButton33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton33"
                android:textSize="6pt"
                android:layout_weight="0.25"/>

            <RadioButton
                android:id="@+id/radioButton34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton34"
                android:textSize="6pt"
                android:layout_weight="0.25"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/radioGroup4Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding = "10dp"
            android:layout_margin="0dp"
            android:layout_weight="0.3"
            android:text = "@string/radioButtonGroup4"
            android:textSize="8pt"/>

        <RadioGroup
            android:id="@+id/radioGroup4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#024CAF50"
            android:orientation="horizontal"
            android:layout_weight="0.7"
            >

            <RadioButton
                android:id="@+id/radioButton41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton41"
                android:textSize="6pt"
                android:layout_weight="0.25"/>

            <RadioButton
                android:id="@+id/radioButton42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton42"
                android:textSize="6pt"
                android:layout_weight="0.25" />

            <RadioButton
                android:id="@+id/radioButton43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton43"
                android:textSize="6pt"
                android:layout_weight="0.25"/>

            <RadioButton
                android:id="@+id/radioButton44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton44"
                android:textSize="6pt"
                android:layout_weight="0.25"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/radioGroup5Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding = "10dp"
            android:layout_margin="0dp"
            android:layout_weight="0.3"
            android:text = "@string/radioButtonGroup5"
            android:textSize="8pt"/>

        <RadioGroup
            android:id="@+id/radioGroup5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#024CAF50"
            android:orientation="horizontal"
            android:layout_weight="0.7"
            >

            <RadioButton
                android:id="@+id/radioButton51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton51"
                android:textSize="6pt"
                android:layout_weight="0.25"/>

            <RadioButton
                android:id="@+id/radioButton52"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton52"
                android:textSize="6pt"
                android:layout_weight="0.25" />

            <RadioButton
                android:id="@+id/radioButton53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton53"
                android:textSize="6pt"
                android:layout_weight="0.25"/>

            <RadioButton
                android:id="@+id/radioButton54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButton54"
                android:textSize="6pt"
                android:layout_weight="0.25"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="20px"
        android:paddingRight="20px"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <CheckBox
            android:id="@+id/checkBoxExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" android:layout_marginTop="10dp"
            android:text="@string/experienceTitle"
            android:layout_weight="0.33" />

        <CheckBox
            android:id="@+id/checkBoxTeamSkills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/teamSkills"
            android:layout_weight="0.33"/>

        <CheckBox
            android:id="@+id/checkBoxReadyToTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/readyToTrip"
            android:layout_weight="0.33"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/resultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:layout_weight="1"
            android:text="@string/resultButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/resultViewLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/resultTextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize = "9pt"
            android:gravity = "top|center"
            android:layout_weight="0.3"
            android:text = "@string/resultTitle" />

        <TextView
            android:id="@+id/resultTextViewValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize = "7pt"
            android:gravity = "center"
            android:layout_weight="0.7" />

    </LinearLayout>

</LinearLayout>
</ScrollView>